--- a/demo/index.html
+++ b/demo/index.html
@@ -18,14 +18,14 @@
                 <label class="form-switch">
                 <input type="checkbox" id="webcam-switch">
                 <i></i> 
-                <span id="webcam-caption">Click to Start Camera</span>
+                <span id="webcam-caption">Щелчок - запуск камеры</span>
                 </label>      
                 <button id="cameraFlip" class="btn d-none"></button>                  
         </div>
         
         <div id="errorMsg" class="col-12 col-md-6 alert-danger d-none">
-            Fail to start camera, please allow permision to access camera. <br/>
-            If you are browsing through social media built in browsers, you would need to open the page in Sarafi (iPhone)/ Chrome (Android)
+            Не удается запустить камеру, разрешите получать доступ к камере. <br/>
+            Если Вы просматриваете страницу в через медиа-модуль в браузерах, то вы должны были бы открыть страницу в браузере Sarafi (iPhone)/ Chrome (Android)
             <button id="closeError" class="btn btn-primary ml-3">OK</button>
         </div>
         <div class="md-modal md-effect-12">
@@ -38,8 +38,8 @@
                 </div>
                 <div id="cameraControls" class="cameraControls">
                     <a href="#" id="exit-app" title="Exit App" class="d-none"><i class="material-icons">exit_to_app</i></a>
-                    <a href="#" id="take-photo" title="Take Photo"><i class="material-icons">camera_alt</i></a>
-                    <a href="#" id="download-photo" download="selfie.png" target="_blank" title="Save Photo" class="d-none"><i class="material-icons">file_download</i></a>  
+                    <a href="#" id="take-photo" title="Сделайте фотографию"><i class="material-icons">camera_alt</i></a>
+                    <a href="#" id="download-photo" download="selfie.png" target="_blank" title="Сохраните фотографию" class="d-none"><i class="material-icons">file_download</i></a>  
                     <a href="#" id="resume-camera"  title="Resume Camera" class="d-none"><i class="material-icons">camera_front</i></a>
                 </div>
             </div>        
